機能の調整
