# src/server/Model/Api/ConfigModel.ts
@@ -126,6 +126,8 @@ class ConfigModel extends ApiModel implements ConfigModelInterface {
 
         if (typeof config.HLSViewer !== 'undefined') { results['HLSViewer'] = config.HLSViewer; }
 
+        if (typeof config.RTMPViewer !== 'undefined') { results['RTMPViewer'] = config.RTMPViewer; }
+
         if (typeof config.liveWebM !== 'undefined') {
             results['liveWebM'] = config.liveWebM.map((option) => {
                 return option.name;
